Got the border up, but got some spacing issues

--- a/style.css
+++ b/style.css
@@ -1,24 +1,76 @@
 body {
+    margin: 0px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+.head {
+    font-family: "roboto";
+    background-color: #1F2937;
 }
 
 .header {
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    justify-content: space-evenly;
+    margin: 10px;
+    gap: 800px;
+}
+
+.heroContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+}
+
+.button {
+    display: flex;
+    color: #3882F6;
+    padding: 0px;
+    gap: 0px;
+    margin: 0px;
+}
+
+.headerContent {
+    display: flex;
+    
+}
+
+.heroMainText {
+    font-size: 48px;
+    font-weight: 900px;
+    color: #F9FAF8;
+}
+
+.heroSecondaryText {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.heroImg {
+    width: 1000px;;
+}
+
+.headerLogo {
+    font-size: 24px;
+    color:#F9FAF8;
 }
 
 .right-links {
+    font-size: 18px;
+    color: #E5E7EB;
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 50px;
+}
+
+.footer {
+    font-family: "roboto";
+    background-color: #1F2937;
 }
 
 /*
-.headerContent {
-}
+
 
 .infoContainer {
 }
@@ -29,6 +81,5 @@ body {
 .callToAction {
 }
 
-.footer {
-}
+
 */
